# rag-assurance-aresia

./: .gitignore  app.py  brief-claude-code.md  pyproject.toml  questions-test-rag.md  rag-reponse-contrat.md  requirements.txt
chroma_db/: chroma.sqlite3
data/: test_results.json
data/chunks/: chunks.json
src/: agent.py  extract_chunks.py  index_chroma.py  test_retrieval.py
tests/: test_golden_set.py
